--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -20,6 +20,7 @@ python-dotenv==1.1.1
 python-multipart==0.0.20
 PyYAML==6.0.3
 requests==2.32.5
+slowapi==0.1.9
 sniffio==1.3.1
 starlette==0.48.0
 typing-inspection==0.4.2
